--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,14 @@
-{{!-- The following component displays Ember's default welcome message. --}}
-<WelcomePage />
-{{!-- Feel free to remove this! --}}
+{{#each results as |tag index|}}
+<div class="item" {{action 'expandBox' tag.name}}>
+  <div class="label"> {{tag.name}} </div>
+  <div class="graph"> {{hori-graph name=tag.name average=tag.percentage identity=index}} </div>
+  {{!-- expanable emlement for regions graph --}}
+ {{tag.expand}}
+
+  <div class="region-detail {{if tag.expand "active"}}">
+    {{region-graph regions=tag.regions}}
+  </div>
+</div>
+{{/each}}
 
 {{outlet}}
