--- a/app/templates/components/hori-graph.hbs
+++ b/app/templates/components/hori-graph.hbs
@@ -1,3 +1,2 @@
-<svg width={{average}} height="30" id={{identity}}> 
-  <rect width={{average}} height="30" style="fill:rgb(245, 114, 175);stroke-width:3;stroke:rgb(235, 141, 203)" />
+<svg class="horizontal" width={{average}} height="30" id={{identity}}> 
 </svg>
