--- a/app/templates/components/hori-graph.hbs
+++ b/app/templates/components/hori-graph.hbs
@@ -1,2 +1,2 @@
-<svg class="horizontal" width={{average}} height="30" id={{identity}}> 
+<svg class="horizontal" width={{width}} height="20" id={{identity}}> 
 </svg>
