--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,24 +1,43 @@
-{{#each results as |tag index|}}
-<div class="item">
-  <div class="label" {{action 'expandBox' tag}}> {{tag.name}} </div>
-  <div class="graph"> {{hori-graph name=tag.name average=tag.percentage identity=index color=tag.color}} </div>
-  {{!-- expanable emlement for regions graph --}}
-   {{#if tag.showJoin}}
-  <button class="showJoin" {{action 'showStackedGraph' tag}}>join</button>
-  {{/if}}
-  <div class="region-detail {{if tag.expand "active"}}">
-    <h4>Starting Salary</h4>
-    {{region-graph regions=tag.regions name="starting" color=tag.color}}
-  </div>
-  <div class="region-detail2 {{if tag.expand "active"}}">
-    <h4>Current Salary</h4>
-    {{region-graph regions=tag.regions name="current"  color=tag.color}}
-  </div>
-  <div class="region-stacked {{if tag.stacked "active"}}">
-    
-    {{stacked-graph regions1=tag.regions regions2=tag.regions}}
-  </div>
-</div>
-{{/each}}
+<h2 class="title">Salaries for Musuem workers</h2>
 
+<div class="title"> <div class="name">Avergae Starting Salary %</div> <div class="name">Avergae Current Salary %</div></div>
+<div class="main">
+  {{#each results as |tag index|}}
+
+
+  <div class="item">
+    <details>
+      <summary>
+        <div class="label" {{action 'expandBox' tag}}> {{tag.name}} </div>
+        <div class="graph"> {{hori-graph name=tag.name average=tag.percentage2 identity=index color=tag.color}}
+          {{hori-graph name=tag.name average=tag.percentage identity=index color=tag.color}}
+        </div>
+      </summary>
+
+      {{!-- expanable emlement for regions graph --}}
+      <button class="showJoin" {{action 'showStackedGraph' tag}}>
+        {{#if tag.stacked}} + By Region {{else}} + By Category {{/if}}
+      </button>
+      <div class="region-detail {{if tag.stacked "hide"}}">
+        <h4>Starting Salary <span>$ per hour</span></h4>
+        {{region-graph regions=tag.startingSalary name="starting" color=tag.color}}
+      </div>
+      <div class="region-detail2 {{if tag.stacked "hide"}}">
+        <h4>Current Salary <span>$ per hour</span></h4>
+        {{region-graph regions=tag.currentSalary name="current"  color=tag.color}}
+      </div>
+      <div class="region-stacked {{if tag.stacked "active"}}">
+        <h4>Starting Salary & Current Salary <span>$ per hour</span></h4>
+        {{stacked-graph regions1=tag.startingSalary regions2=tag.currentSalary}}
+      </div>
+      <div class="treeMap {{if tag.stacked "active"}}">
+        <h4>Starting Salaries of roles<span> $ per hour</span></h4>
+        {{tree-map data=tag.roles}}
+      </div>
+    </details>
+
+
+  </div>
+  {{/each}}
+</div>
 {{outlet}}
