--- a/app/templates/components/tree-map.hbs
+++ b/app/templates/components/tree-map.hbs
@@ -1,4 +1,9 @@
+<div class="legend">
+  {{#each legend as |leg|}}
+  <h6><span  style="background-color:{{leg.color}}">&nbsp;</span>{{leg.name}}</h6>
+  {{/each}}
+</div>
 <div class="parent">
-<svg class="jolly">
-</svg>
+  <svg class="jolly">
+  </svg>
 </div>
