--- a/app/templates/components/stacked-graph.hbs
+++ b/app/templates/components/stacked-graph.hbs
@@ -1,3 +1,7 @@
+<div class="legend">
+    <h6>Starting Salary</h6>
+    <h6>Current Salary</h6>
+</div>
 <div class="parent">
 <svg class="jolly">
      {{!-- <rect width="60" height="30" style="fill:rgb(114, 160, 245);stroke-width:3;stroke:rgb(235, 141, 203)" /> --}}
